@@ -17,28 +17,27 @@
 package com.servoy.eclipse.designer.editor;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.sablo.specification.PropertyDescription;
-import org.sablo.specification.WebObjectSpecification;
-
 import com.servoy.eclipse.core.ServoyModelManager;
 import com.servoy.eclipse.model.util.ModelUtils;
+import com.servoy.eclipse.model.util.PersistFinder;
 import com.servoy.eclipse.model.util.ServoyLog;
 import com.servoy.eclipse.ui.property.PersistContext;
 import com.servoy.eclipse.ui.util.ElementUtil;
+import com.servoy.j2db.persistence.AbstractBase;
 import com.servoy.j2db.persistence.Form;
 import com.servoy.j2db.persistence.IFormElement;
 import com.servoy.j2db.persistence.IPersist;
 import com.servoy.j2db.persistence.IRepository;
 import com.servoy.j2db.persistence.NameComparator;
 import com.servoy.j2db.persistence.RepositoryException;
-import com.servoy.j2db.server.ngclient.FormElement;
 import com.servoy.j2db.server.ngclient.FormElementHelper;
-import com.servoy.j2db.server.ngclient.property.types.FormComponentPropertyType;
+import com.servoy.j2db.server.ngclient.template.FormTemplateGenerator;
+import com.servoy.j2db.server.ngclient.utils.FormComponentUtils;
+import com.servoy.j2db.server.ngclient.utils.FormComponentUtils.FCCCHandlerArgs;
 import com.servoy.j2db.server.shared.ApplicationServerRegistry;
 import com.servoy.j2db.server.shared.SecurityInfo;
 import com.servoy.j2db.util.UUID;
@@ -52,13 +51,13 @@ import com.servoy.j2db.util.UUID;
 public class ElementSettingsModel
 {
 	private String currentGroup;
-	private final Map<String, Map<UUID, Integer>> securityInfo;
+	private final Map<String, Map<String, Integer>> securityInfo;
 	private final Form form;
 
 	public ElementSettingsModel(Form form)
 	{
 		this.form = form;
-		securityInfo = new HashMap<String, Map<UUID, Integer>>();
+		securityInfo = new HashMap<String, Map<String, Integer>>();
 	}
 
 	public void setCurrentGroup(String group)
@@ -74,33 +73,59 @@ public class ElementSettingsModel
 
 	private int getAccess(IPersist element)
 	{
-		UUID uuid = element.getUUID();
+		String uuidToString = element.getUUID().toString();
+		String identifierToString = PersistFinder.INSTANCE.fromPersist(element).toJSONString();
+
 		int access = form.getImplicitSecurityNoRights() ? IRepository.IMPLICIT_FORM_NO_ACCESS : IRepository.IMPLICIT_FORM_ACCESS;// default value
-		Map<UUID, Integer> currentGroupSecurityInfo = securityInfo.get(currentGroup);
-		if (currentGroupSecurityInfo != null && currentGroupSecurityInfo.containsKey(uuid))
+		Map<String, Integer> currentGroupSecurityInfo = securityInfo.get(currentGroup);
+
+		Integer explicitAccessForThisElement = null;
+
+		if (currentGroupSecurityInfo != null)
 		{
-			access = currentGroupSecurityInfo.get(uuid).intValue();
+			explicitAccessForThisElement = currentGroupSecurityInfo.get(identifierToString);
+			if (explicitAccessForThisElement == null) explicitAccessForThisElement = currentGroupSecurityInfo.get(uuidToString);
+		}
+
+		if (explicitAccessForThisElement != null)
+		{
+			// we already had it read/used in this editor's map
+			access = explicitAccessForThisElement.intValue();
 		}
 		else
 		{
+			// read it from the user manager
 			List<SecurityInfo> infos = ServoyModelManager.getServoyModelManager().getServoyModel().getUserManager().getSecurityInfos(currentGroup, form);
 			if (infos != null)
 			{
+				// first check using PersistIdentifier - so it works OK for children of form components
+				// for other elements it will be identical to the UUID anyway so it will match
 				for (SecurityInfo info : infos)
 				{
-					if (info.element_uid.equals(uuid.toString()))
+					if (info.element_uid.equals(identifierToString))
 					{
-						access = info.access;
+						explicitAccessForThisElement = Integer.valueOf(info.access);
 						break;
 					}
 
 				}
+				// check using UUID as it worked before - as it might have been stored like that with old code even for children of from components
+				if (explicitAccessForThisElement == null) for (SecurityInfo info : infos)
+				{
+					if (info.element_uid.equals(uuidToString))
+					{
+						explicitAccessForThisElement = Integer.valueOf(info.access);
+						break;
+					}
+
+				}
+				if (explicitAccessForThisElement != null) access = explicitAccessForThisElement.intValue();
 			}
 		}
 		return access;
 	}
 
-	public void setRight(boolean hasRight, IPersist element, int mask)
+	public void setAccessRight(boolean hasRight, IPersist element, int mask)
 	{
 		int access = getAccess(element);
 		if (hasRight) access = access | mask;
@@ -118,14 +143,18 @@ public class ElementSettingsModel
 		{
 			ServoyLog.logError(ex);
 		}
-		Map<UUID, Integer> currentGroupSecurityInfo = securityInfo.get(currentGroup);
+		Map<String, Integer> currentGroupSecurityInfo = securityInfo.get(currentGroup);
 		if (currentGroupSecurityInfo == null)
 		{
-			currentGroupSecurityInfo = new HashMap<UUID, Integer>();
+			currentGroupSecurityInfo = new HashMap<String, Integer>();
 			securityInfo.put(currentGroup, currentGroupSecurityInfo);
 		}
-		currentGroupSecurityInfo.remove(uuid);
-		currentGroupSecurityInfo.put(element.getUUID(), new Integer(access));
+
+		String persistIdentifierToString = PersistFinder.INSTANCE.fromPersist(element).toJSONString();
+		currentGroupSecurityInfo.remove(uuid.toString());
+		currentGroupSecurityInfo.remove(persistIdentifierToString);
+
+		currentGroupSecurityInfo.put(persistIdentifierToString, Integer.valueOf(access));
 	}
 
 	public void saveSecurityElements()
@@ -136,15 +165,16 @@ public class ElementSettingsModel
 			String solutionName = form.getSolution().getName();
 			for (String group : securityInfo.keySet())
 			{
-				Map<UUID, Integer> currentGroupSecurityInfo = securityInfo.get(group);
+				Map<String, Integer> currentGroupSecurityInfo = securityInfo.get(group);
 				if (currentGroupSecurityInfo != null)
 				{
-					for (UUID uuid : currentGroupSecurityInfo.keySet())
+					for (String uid : currentGroupSecurityInfo.keySet())
 					{
-						if (formElements.stream().anyMatch(formElement -> formElement.getUUID().equals(uuid)))
+						if (formElements.stream().anyMatch(formElement -> (PersistFinder.INSTANCE.fromPersist(formElement).toJSONString().equals(uid) ||
+							formElement.getUUID().toString().equals(uid))))
 						{
 							ServoyModelManager.getServoyModelManager().getServoyModel().getUserManager().setFormSecurityAccess(
-								ApplicationServerRegistry.get().getClientId(), group, currentGroupSecurityInfo.get(uuid), form.getUUID(), uuid, solutionName);
+								ApplicationServerRegistry.get().getClientId(), group, currentGroupSecurityInfo.get(uid), form.getUUID(), uid, solutionName);
 						}
 
 					}
@@ -167,31 +197,19 @@ public class ElementSettingsModel
 			if (elem.getName() != null && elem.getName().length() != 0)
 			{
 				formElements.add(elem);
-				FormElement formComponentEl = FormElementHelper.INSTANCE.getFormElement(elem, ModelUtils.getEditingFlattenedSolution(form),
-					null, true);
-				WebObjectSpecification spec = formComponentEl.getWebComponentSpec();
-				if (spec != null)
+
+				if (FormTemplateGenerator.isWebcomponentBean(elem))
 				{
-					Collection<PropertyDescription> properties = spec.getProperties(FormComponentPropertyType.INSTANCE);
-					if (properties.size() > 0)
-					{
-						for (PropertyDescription pd : properties)
-						{
-							Object propertyValue = formComponentEl.getPropertyValue(pd.getName());
-							Form frm = FormComponentPropertyType.INSTANCE.getForm(propertyValue, ModelUtils.getEditingFlattenedSolution(form));
-							if (frm != null)
+					FormComponentUtils.addFormComponentComponentChildren(elem,
+						ModelUtils.getEditingFlattenedSolution(form), true, (FCCCHandlerArgs<Void> args) -> {
+							String ownName = ((AbstractBase)args.childFe())
+								.getRuntimeProperty(FormElementHelper.FC_CHILD_ELEMENT_NAME_INSIDE_DIRECT_PARENT_FORM_COMPONENT);
+							if (ownName != null && ownName.length() != 0)
 							{
-								List<IFormElement> formComponentElements = frm.getFlattenedObjects(NameComparator.INSTANCE);
-								for (IFormElement formCompElement : formComponentElements)
-								{
-									if (formCompElement.getName() != null && formCompElement.getName().length() != 0)
-									{
-										formElements.add(formCompElement);
-									}
-								}
+								formElements.add(args.childFe());
 							}
-						}
-					}
+							return null;
+						}, null, true);
 				}
 			}
 		}
